# Employee-Onboarding-AI-AAMAD

./: .gitignore  README.md  package-lock.json
aamad/: .env.example  README.md  pyproject.toml
aamad/src/aamad/: crew.py  main.py
aamad/src/aamad/config/: agents.yaml  tasks.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: HistoryPanel.tsx  InputsForm.tsx  ResultsView.tsx  RunPanel.tsx
frontend/src/fsm/: workflowFsm.ts
frontend/src/hooks/: useResearchWorkflow.ts
frontend/src/pages/: CriticalResearchPage.tsx
frontend/src/services/: researchRunService.ts
frontend/src/types/: workflow.ts
frontend/src/utils/: validation.ts
project-context/1.define/: MRD.md  PRD.md  sad.md
project-context/2.build/: frontend-funcional-spec.md  frontend.md
