[project]
name = "aamad"
version = "0.1.0"
description = "aamad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,google-genai]==1.14.7"
]

[project.scripts]
aamad = "aamad.main:run"
run_crew = "aamad.main:run"
train = "aamad.main:train"
replay = "aamad.main:replay"
test = "aamad.main:test"
run_with_trigger = "aamad.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
